2004-06-21  John Levon  <levon@movementarian.org>

	* events/i386/p4/events:
	* events/i386/p4-ht/events:
	* module/x86/op_model_athlon.c:
	* module/x86/op_model_p4.c:
	* module/x86/op_model_ppro.c:
	* module/ia64/op_pmu.c: fix bug 964097 (event
	code of 0x00 doesn't work) by relying consistently
	on "enabled" not "event"

2004-05-29  John Levon  <levon@movementarian.org>

	* libdb/tests/Makefile.am: fix build

 	* daemon/opd_mangling.c:
	* daemon/opd_mangling.h:
	* daemon/opd_sfile.c:
	* daemon/opd_sfile.h:
	* daemon/liblegacy/opd_sample_files.h:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/Makefile.am:
	* libdb/db_debug.c:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_stat.c:
	* libdb/db_travel.c:
	* libdb/odb.h:
	* libdb/odb_hash.h:
	* libdb/tests/db_test.c:
	* libpp/op_header.cpp:
	* libpp/profile.cpp:
	* libpp/profile.h: s/samples_odb_t/odb_t/, move
	odb_hash.h to odb.h

2004-05-28  John Levon  <levon@movementarian.org>

	* daemon/opd_mangling.cpp:
	* daemon/opd_sfile.cpp:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_sample_files.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_manage.cpp:
	* libdb/odb_hash.h:
	* libpp/profile.cpp: introduce and use odb_get_data(),
	odb_open_count()

2004-05-28  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.cpp:
	* libpp/arrange_profiles.cpp: trivialities

2004-05-28  Bin Ren  <bin.ren@cl.cam.ac.uk>

	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* daemon/oprofiled.c:
	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_sample_files.c:
	* libdb/db_debug.c:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_stat.c:
	* libdb/odb_hash.h:
	* libdb/db_travel.c:
	* libpp/op_header.cpp:
	* libpp/profile.cpp:
	* libutil/op_string.c:
	* libutil/op_string.h: fix dcookie alias bug by
	  introducing one level of indirection and hash
	  sample files by path names (bug #931871)
